[package]
name = "myBioTools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
needletail = "0.7"
indexmap = "2.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
